# minitalk

./: CMakeLists.txt  Makefile  client  server
includes/: minitalk.h  minitalk_bonus.h
libft/: Makefile  ft_atod.c  ft_atof.c  ft_atoi.c  ft_atol.c  get_next_line_utils.c  libft.h
srcs/: client.c  client_bonus.c  server.c  server_bonus.c
