cmake_minimum_required(VERSION 3.12)

project(minitalk)
include_directories(libft)
file(GLOB SOURCES_LIBFT "libft/*.c")
add_library(LIBFT STATIC ${SOURCES_LIBFT})
include_directories(includes)
file(GLOB SOURCES_MINITALK "srcs/*.c")
add_library(MINITALK STATIC ${SOURCES_MINITALK})
file(GLOB SOURCES_CLIENT "srcs/client.c" "libft/*.c")
add_executable(client ${SOURCES_CLIENT})
file(GLOB SOURCES_SERVER "srcs/server.c" "libft/*.c")
include_directories(includes)
file(GLOB SOURCES_MINITALK_B "srcs/*.c")
add_library(MINITALK_B STATIC ${SOURCES_MINITALK_B})
file(GLOB SOURCES_CLIENT_B "srcs/client_bonus.c" "libft/*.c")
add_executable(client_bonus ${SOURCES_CLIENT_B})
file(GLOB SOURCES_SERVER_B "srcs/server_bonus.c" "libft/*.c")
add_executable(server_bonus ${SOURCES_SERVER_B})
